fix name not showing in title in profile page

--- a/src/ProfilePage/Profile.module.css
+++ b/src/ProfilePage/Profile.module.css
@@ -2,6 +2,10 @@
     margin: 0 2rem 10rem 2rem;
 }
 
+.helloMsg {
+    text-transform: uppercase;
+}
+
 .fieldTable {
     border-collapse: collapse;
     width: 100%;
